--- a/css/styles.css
+++ b/css/styles.css
@@ -258,18 +258,21 @@ button {
   width: 100%;
   height: 100%;
   background-color: #fff;
+  z-index: 999;
 
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-
+  transform: translateX(100%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  transform: translateX(0);
 }
 @media only screen and (min-width: 768px) {
   .mobile-menu {
